# DocuMind

./: .gitignore  README.md  VISUALIZATION_QUICK_START.md  dev.sh  render.yaml  run_app.sh  vercel.json
api/: .env.example  .gitignore  index.py  main.py  pyproject.toml  requirements-vercel.txt  requirements.txt  test_chunking_performance.py  users.json  vercel.json  verify_imports.py
api/controller/: auth_controller.py  chat_controller.py  query_controller.py  rag_controller.py  speech_controller.py
api/data/: metadata_store.json  parent_chunks.json
api/lib/: config.py
api/routes/: auth.py  chat.py  export.py  rag.py  visualization.py
api/schema/: query_schema.py  rag_schema.py
api/service/: database_service.py  gemini_service.py  pinecone_service.py  rag_modules_service.py  user_documents_service.py
api/service/features/: chat_session_service.py  database_visualization_service.py  file_processing_service.py  pdf_export_service.py  speech_service.py  sql_analysis_service.py  sql_generation_service.py
api/service/infrastructure/: auth_service.py  database_service.py  user_service.py
api/service/rag/: embedding_service.py  gemini_service.py  pinecone_service.py  rag_service.py
documentation/: ARCHITECTURE.md  CHUNKING_OPTIMIZATION_GUIDE.md  DOCUMENTS_PAGE_FIX.md  Data_analysis.md  Database_Visualization_Feature.md  MARKDOWN_FORMATTING.md  Modular_RAG_Implementation_Guide.md  README.md  RESET_INDEX.md  RESPONSE_STYLE_GUIDE.md  Response_Style_Feature.md  TECHNICAL_SPECIFICATION.md  UI_IMPROVEMENTS_SUMMARY.md  USER_AND_ADMIN_GUIDE.md  mini_phase1.key
(+38 files in other folders)
