[project]
name = "api"
version = "0.1.0"
description = "Modular RAG API with JWT authentication"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    # Core API
    "fastapi==0.95.2",
    "uvicorn==0.23.2",
    "pydantic==1.10.13",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.6",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",

    # Databases
    "sqlalchemy==2.0.25",
    "psycopg2-binary==2.9.9",
    "pymongo==4.6.1",
    "motor==3.3.2",
    "dnspython==2.6.1",

    # AI / RAG
    "pinecone-client==3.0.0",
    "numpy==1.26.4",
    "google-generativeai==0.3.2",

    # File processing
    "pypdf==3.17.4",
    "python-docx==1.1.0",
    "beautifulsoup4==4.12.3",
    "markdown==3.5.2",
    "reportlab==4.0.9",
    "bs4==0.0.2",
]
